@@ -1033,13 +1033,6 @@
 				<File
 					RelativePath="..\..\..\Albert\gfx\font.cp"
 					>
-					<FileConfiguration
-						Name="Release|Win32"
-						>
-						<Tool
-							Name="VCCLCompilerTool"
-						/>
-					</FileConfiguration>
 				</File>
 				<File
 					RelativePath="..\..\..\Albert\gfx\font.h"
@@ -1048,13 +1041,6 @@
 				<File
 					RelativePath="..\..\..\Albert\gfx\gfx_stubs.cp"
 					>
-					<FileConfiguration
-						Name="Release|Win32"
-						>
-						<Tool
-							Name="VCCLCompilerTool"
-						/>
-					</FileConfiguration>
 				</File>
 				<File
 					RelativePath="..\..\..\Albert\gfx\gfx_stubs.h"
@@ -1063,13 +1049,6 @@
 				<File
 					RelativePath="..\..\..\Albert\gfx\point.cp"
 					>
-					<FileConfiguration
-						Name="Release|Win32"
-						>
-						<Tool
-							Name="VCCLCompilerTool"
-						/>
-					</FileConfiguration>
 				</File>
 				<File
 					RelativePath="..\..\..\Albert\gfx\point.h"
@@ -1078,13 +1057,6 @@
 				<File
 					RelativePath="..\..\..\Albert\gfx\TRect.cp"
 					>
-					<FileConfiguration
-						Name="Release|Win32"
-						>
-						<Tool
-							Name="VCCLCompilerTool"
-						/>
-					</FileConfiguration>
 				</File>
 				<File
 					RelativePath="..\..\..\Albert\gfx\TRect.h"
@@ -1097,13 +1069,6 @@
 				<File
 					RelativePath="..\..\..\Albert\math\fixed.cp"
 					>
-					<FileConfiguration
-						Name="Release|Win32"
-						>
-						<Tool
-							Name="VCCLCompilerTool"
-						/>
-					</FileConfiguration>
 				</File>
 				<File
 					RelativePath="..\..\..\Albert\math\fixed.h"
@@ -1111,17 +1076,6 @@
 				</File>
 				<File
 					RelativePath="..\..\..\Albert\math\math_stubs.cp"
-					>
-					<FileConfiguration
-						Name="Release|Win32"
-						>
-						<Tool
-							Name="VCCLCompilerTool"
-						/>
-					</FileConfiguration>
-				</File>
-				<File
-					RelativePath="..\..\..\Albert\math\math_stubs.h"
 					>
 				</File>
 			</Filter>
@@ -1159,13 +1113,6 @@
 				<File
 					RelativePath="..\..\..\Albert\objects\objects_stubs.cp"
 					>
-					<FileConfiguration
-						Name="Release|Win32"
-						>
-						<Tool
-							Name="VCCLCompilerTool"
-						/>
-					</FileConfiguration>
 				</File>
 				<File
 					RelativePath="..\..\..\Albert\objects\objects_stubs.h"
@@ -1174,13 +1121,6 @@
 				<File
 					RelativePath="..\..\..\Albert\objects\TDoubleQContainer.cp"
 					>
-					<FileConfiguration
-						Name="Release|Win32"
-						>
-						<Tool
-							Name="VCCLCompilerTool"
-						/>
-					</FileConfiguration>
 				</File>
 				<File
 					RelativePath="..\..\..\Albert\objects\TDoubleQContainer.h"
@@ -1189,13 +1129,6 @@
 				<File
 					RelativePath="..\..\..\Albert\objects\TDoubleQItem.cp"
 					>
-					<FileConfiguration
-						Name="Release|Win32"
-						>
-						<Tool
-							Name="VCCLCompilerTool"
-						/>
-					</FileConfiguration>
 				</File>
 				<File
 					RelativePath="..\..\..\Albert\objects\TDoubleQItem.h"
@@ -1204,13 +1137,6 @@
 				<File
 					RelativePath="..\..\..\Albert\objects\TObject.cp"
 					>
-					<FileConfiguration
-						Name="Release|Win32"
-						>
-						<Tool
-							Name="VCCLCompilerTool"
-						/>
-					</FileConfiguration>
 				</File>
 				<File
 					RelativePath="..\..\..\Albert\objects\TObject.h"
@@ -1219,13 +1145,6 @@
 				<File
 					RelativePath="..\..\..\Albert\objects\TObjectTable.cp"
 					>
-					<FileConfiguration
-						Name="Release|Win32"
-						>
-						<Tool
-							Name="VCCLCompilerTool"
-						/>
-					</FileConfiguration>
 				</File>
 				<File
 					RelativePath="..\..\..\Albert\objects\TObjectTable.h"
